--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,5 +17,5 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
-<h1>I am localA sravan</h1>
+<h1>I am localA sra1</h1>
 <router-outlet></router-outlet>
